--- a/client/package.json
+++ b/client/package.json
@@ -6,11 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint --fix"
   },
   "dependencies": {
     "@apollo/client": "^3.6.6",
-    "@nextui-org/react": "^1.0.0-beta.8",
+    "@chakra-ui/icons": "^2.0.2",
+    "@chakra-ui/react": "^2.2.1",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "framer-motion": "^6",
     "graphql": "^16.5.0",
     "next": "12.1.6",
     "react": "18.1.0",
@@ -20,6 +24,8 @@
     "autoprefixer": "^10.4.7",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
-    "postcss": "^8.4.14"
+    "eslint-config-prettier": "^8.5.0",
+    "postcss": "^8.4.14",
+    "prop-types": "^15.8.1"
   }
 }
