--- a/package.json
+++ b/package.json
@@ -1,22 +1,6 @@
 {
   "name": "graphql-mern",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "scripts": {
-    "start": "node server/index",
-    "dev": "nodemon server/index"
-  },
-  "dependencies": {
-    "colors": "^1.4.0",
-    "cors": "^2.8.5",
-    "express": "^4.18.1",
-    "express-graphql": "^0.12.0",
-    "graphql": "^16.5.0",
-    "mongoose": "^6.3.5"
-  },
-  "devDependencies": {
-    "dotenv": "^16.0.1",
-    "nodemon": "^2.0.16"
-  }
+  "repository": "https://github.com/dfm555/graphql-mern.git",
+  "license": "MIT"
 }
