--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,10 @@
     "@chakra-ui/react": "^2.2.1",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "deepmerge": "^4.2.2",
     "framer-motion": "^6",
     "graphql": "^16.5.0",
+    "lodash": "^4.17.21",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
