--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "eslint-config-next": "12.1.6",
     "eslint-config-prettier": "^8.5.0",
     "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
     "prop-types": "^15.8.1"
   }
 }
